p3/confs/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app: wil-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: wil-playground
        # Using Wil's pre-made application from Dockerhub
        # v1 version - can be changed to v2 for second version
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
